Home Page Updated 🚀

--- a/src/home/home.html
+++ b/src/home/home.html
@@ -10,13 +10,10 @@
 </head>
 <body>
     <div id="container">
-        <input type="file" id="dataset" accept=".csv">
+        <input type="file" id="dataset" accept=".csv,text/csv">
         <div id ="dropzone">
-            <h1>
-                <img src="/visualeyes/misc/dnd_icon.png" alt="" style="width: 300px; position: relative; left: 12%;">
-                <br>
-                Drag & Drop Your Dataset
-            </h1>
+            <img src="/misc/dnd_icon.png" alt="" style="width: 250px; position: relative; left: 15%;">
+            <h1 style="white-space: nowrap;">Drag & Drop Your Dataset</h1>
         </div>
     </div>
 </body>
