--- a/src/home/home.html
+++ b/src/home/home.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visualeyes</title>
-    <link rel="stylesheet" href="home.css">
-    <script defer src="home.js"></script>
+    <link rel="stylesheet" href="./home.css">
+    <script defer src="./home.js"></script>
 </head>
 <body>
     <div id="container">
         <input type="file" id="dataset" accept=".csv,text/csv">
         <div id ="dropzone">
-            <img src="/misc/dnd_icon.png" alt="" style="width: 250px; position: relative; left: 15%;">
+            <img src="/src/assets/dnd_icon.png" alt="" style="width: 250px; position: relative; left: 17%;">
             <h1 style="white-space: nowrap;">Drag & Drop Your Dataset</h1>
         </div>
     </div>
