:construction: Theme-ify borders

--- a/src/vis/vis.html
+++ b/src/vis/vis.html
@@ -15,12 +15,12 @@
     <script src="https://cdn.plot.ly/plotly-2.2.0.min.js"></script> 
     <script src="https://cdn.jsdelivr.net/npm/danfojs@0.2.7/lib/bundle.min.js"></script>
     <script defer src="home.js"></script>
-    <title>Document</title>
+    <title>Visualeyes</title>
   </head>
   <body>
     <div class="wrapper">
       <div class="dataset-container">
-        <h1 class="title">Dataset</h1>
+        <h1 class="title">Dataset</h1><br><hr style="border-top: dashed 4px black; color: white;"><br>
         <div class="attribute-container">
           <input type="checkbox" class="dataset-column-name">Lorem.</input><br>
           <input type="checkbox" class="dataset-column-name">Earum.</input><br>
@@ -30,7 +30,7 @@
         </div>
       </div>
       <div class="vis-container">
-        <h1 class="title">Visualization</h1>
+        <h1 class="title">Visualization</h1><br><hr style="border-top: dashed 4px black; color: white;"><br>
         <div class="vis-btn-container">
                 <input type="radio" name="vis-select" id="vis-lorem"/>
                 <label for="vis-lorem">Lorem.</label>
