--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <!-- Import Google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 
     <!-- Import Danfo.js -->
     <script src="https://cdn.plot.ly/plotly-2.2.0.min.js"></script> 
